# LeetCode

./: .prettierrc.json  319_BulbSwitcher.py  LeetCodeCheatSheet.md  Makefile  README.md  properdocs.yml  pyproject.toml
Easy/: 104_maximum_depth_of_binary_tree.py  125_valid_palindrome.py  136_single_number.py  13_roman_to_integer.py  141_linked_list_cycle.py  143_reorder_list.py  144_binary_tree_preorder_traversal.py  14_longest_common_prefix.py  1710_maximum_units_on_truck.py  190_reverse_bits.py  191_numbers_of_1_bits.py  1971_find_if_path_exists_in_graph.py  1_two_sum.py  202_is_happy.py  206_reverse_linked_list.py  20_valid_parentheses.py  226_invert_binary_tree.py  252_meeting_rooms.py  496_next_greater_element.py  543_diameter_of_binary_tree.py  637_average_of_levels_in_binary_tree.py  643_maximum_average_subarray.py  70_climbing_stairs.py  746_min_cost_climbing_stairs.py  94_binary_tree_inorder_traversal.py
Medium/: 0_reconstructy_itinerary.py  1011_capacity_to_ship_packages_within_d_days.py  102_binary_tree_level_order_traversal.py  1090 shortest_path_in_binary_matrix.py  1123_lowest_common_anchestor_of_deepest_leaves.py  116_populating_next_right_pointers_in_each_node.py  11_container_with_most_water.py  128_longest_consecutive_sequence.py  130_surrounded_regions.py  133_clone_graph.py  137_single_number_2.py  138_copy_list_with_random_pointer.py  139_word_break.py  141_linked_list_cycle.py  1448_count_good_nodes_binary_tree.py  146_LRU_Cache.py  150_evaluate_reverse_polish_notation.py  153_find_minimum_in_rotated_sorted_array.py  1584_min_cost_to_connect_all_points.py  15_3sum.py  167_two_sum_2.py  167_two_sum_II_input_array_is_sorted.py  17_letter_combination_of_a_phone_number.py  1942_the_number_of_the_smallest_unoccupide_chair.py  198_house_robber.py  19_remove_nth_node_from_end_of_list.py  200_number_of_islands.py  201_range_bitwise_and.py  207_course_schedule.py  210_course_schedule_2.py  213_House_Robber.py  215_find_kth_largest_element_in_an_array.py  22_generate_parentheses.py  (+42 more)
(+159 files in other folders)
