[project]
name = "leetcode"
version = "0.1.0"
description = "LeetCode solutions in Python"
authors = [{ name = "Cristian C. Spagnuolo", email = "cristian.c.spagnuolo@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch-judge>=0.1.1",
]

[dependency-groups]
dev = [
    "build>=1.3.0,<2.0.0",
    "mkdocs-callouts>=1.0.0,<2.0.0",
    "mkdocs-material>=9.7.6,<9.8.0",
    "properdocs>=1.6.1,<2.0.0",
    "mkdocs-gen-files>=0.6.1,<0.7.0",
    "mkdocs-literate-nav>=0.6.3,<0.7.0",
    "mkdocstrings[python]>=0.30.1,<0.31.0",
    "pre-commit>=4.3.0,<5.0.0",
    "python-semantic-release>=9.21,<10.0.0",
    "ruff>=0.15.11,<0.16.0",
    "flake8>=7.0.0,<8.0.0",
    "pydoclint[flake8]>=0.7.3,<0.9.0",
    "Flake8-pyproject>=1.2.3,<2.0.0",
]

pytorch = [
    "torch>=2.12.0",
]

[tool.ruff]
line-length = 100
include = ["*.py"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
preview = true
select = ["E", "W", "I", "F", "D", "C90", "PGH", "RUF", "DOC"]
ignore = [
    "D10",  
    "RUF010",
    "RUF067",
    "DOC201",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["leetcode", "utils"]
typeCheckingMode = "basic"
reportFunctionMemberAccess = true
reportPossiblyUnboundVariable = true
reportIncompatibleMethodOverride = true

[tool.setuptools.packages.find]
include = ["leetcode*"]

[tool.uv]
default-groups = []
package = true

[tool.flake8]
style = "google"
skip-checking-short-docstrings = true
arg-type-hints-in-signature = true
arg-type-hints-in-docstring = false
check-return-types = false
check-arg-order = true
allow-init-docstring = true
should-document-star-arguments = true
# See https://jsh9.github.io/pydoclint/config_options.html for more details.

select = ["DOC"]
ignore = [
    "DOC111" # Complains if `--arg-type-hints-in-docstring` is `False` but there are type hints in the docstring arg list
]
